--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,9 +13,14 @@ dependencies:
   
   intl:	">=0.15.0 <0.17.0"
   simple_gesture_detector: ^0.1.3
+  flutter_svg: ^0.15.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
 flutter:
+  assets:
+    - assets/images/
+assets:
+  - assets/images/
