--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,15 +5,16 @@ author: Aleksander Woźniak <aleksanderwozniak96@gmail.com>
 homepage: https://github.com/aleksanderwozniak/table_calendar
 
 environment:
-  sdk: ">=2.2.2 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
-  
-  intl:	">=0.15.0 <0.17.0"
-  simple_gesture_detector: ^0.1.3
-  flutter_svg: ^0.19.0
+
+  intl:	^0.17.0
+  simple_gesture_detector: ^0.2.0
+  flutter_svg: ^0.21.0+1
+  collection: ^1.15.0
 
 dev_dependencies:
   flutter_test:
