--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,7 @@ dependencies:
 
   intl:	^0.17.0
   simple_gesture_detector: ^0.2.0
-  flutter_svg: ^0.21.0+1
+  flutter_svg: ^0.22.0
   collection: ^1.15.0
 
 dev_dependencies:
